# decentralized-blog

./: README.md  package-lock.json  package.json  vercel.json
anchor/: Anchor.toml
anchor/programs/curd/: Cargo.toml
anchor/programs/curd/src/: lib.rs
anchor/src/: counter-exports.ts
public/: robots.txt  site.webmanifest
src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
src/app/api/cron/declare-winner/: route.ts
src/app/api/pinata/upload/: route.ts
src/app/api/pinata/upload-json/: route.ts
src/app/blogs/: page.tsx
src/app/blogs/[id]/: page.tsx
src/app/blogs/create/: page.tsx
src/app/lucky-wheel/: page.tsx
src/components/: app-alert.tsx  app-footer.tsx  app-header.tsx  app-layout.tsx  app-modal.tsx  app-providers.tsx  app-sidebar.tsx  wallet-balance.tsx
src/components/account/: account-data-access.tsx  account-detail-feature.tsx  account-ui.tsx
src/components/counter/: counter-data-access.tsx  counter-feature.tsx  counter-ui.tsx
src/components/lucky-wheel/: constants.ts  index.ts  lucky-wheel-game.tsx  types.ts  utils.ts
src/lib/: pinata-client.ts  pinata.ts
